Fix SVGs being cut off

--- a/scss/_default.scss
+++ b/scss/_default.scss
@@ -206,7 +206,7 @@ p {
   }
 
   .line-circle-container {
-    
+    // position: relative;
   }
   
   .blue-line-right {
@@ -237,14 +237,16 @@ p {
 
   .female-mask {
     // width: 227px;
-    // height: 320px;
+    width: 230px;
+    height: 320px;
     // overflow: visible;
     position: relative;
     left: 16px;
   }
 
   .mask-female-circle {
-    // width: 254px;
+    width: 259px;
+    height: 256px;
 // width: 100%;
     position: relative;
     top: -333px;
